agregue comentarios en el html taller

--- a/taller.html
+++ b/taller.html
@@ -49,6 +49,9 @@
             <p>
             Aca encontraras los trabajos que realizamos en nuestro taller
             </p>
+            <p class="text-secondary text-center">
+              *Los precios detallados son de mano de obra correspondientes al mes de Septiembre 2022*
+            </p>
             <div class="container">
               <table class="table text-white text-start">
                   <tr>
