Se ajustan media querie para entrega final y se agrega Wireframe

--- a/accesorios.html
+++ b/accesorios.html
@@ -16,8 +16,8 @@
         <p class="text-warning bg-dark mb-0 p-2 fs-7 text-center" id="Inicio">10% de Descuento en Efectivo/Transferencia</p>
         <nav class="navbar navbar-dark navbar-expand-lg bg-black p-3 textoNav">
             <div class="container-fluid">
-              <a class="navbar-brand " href="./index">
-                <span class="text-white fs-5 fw-bold  "><img src="./multimedia/Logo2.jpg" alt=""> MOLINA MOTORSPORT</span>
+              <a class="navbar-brand " href="./index.html">
+                <span class="text-white fs-5 fw-bold  "><img src="./multimedia/Logo2.jpg" alt="Logo"> MOLINA MOTORSPORT</span>
             </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
