--- a/contacto.html
+++ b/contacto.html
@@ -51,10 +51,10 @@
                 <img  class="img-fluid mapaEntregas" src="./multimedia/contacto/Mapa.JPG" alt="Mapa">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 bg-light">
-                <img  class="img-fluid" src="./multimedia/contacto/cajasEntrega.png" alt="Caja entregas">
+                <div class="imagenEntregas"><img  class="img-fluid" src="./multimedia/contacto/cajasEntrega.png" alt="Caja entregas"></div>
                 <div class="entrgas-texto">
-                  <h2 class="text-warning">Ubicacion de entregas</h2>
-                  <p class="fs-5 text-dark">Elegimos Lanús ya que es un lindo lugar donde la gente se reune y es muy transitada para tu seguridad y la nuestra. Las entregas se realizan de Lunes a Viernes de 9hs a 18hs, Sabados de 9hs a 13hs 
+                  <h2 class="text-warning">Ubicación de entregas</h2>
+                  <p class="fs-5 text-dark">Elegímos Lanús ya que es un lindo lugar donde la gente se reune y es muy transitada para tu seguridad y la nuestra. Las entregas se realizan de Lunes a Viernes de 9hs a 18hs, Sabados de 9hs a 13hs 
                   </p>
                 </div>
             </div>
@@ -67,11 +67,11 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="flush-headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-              ¿Donde estan ubicados?
+              ¿Dónde estan ubicados?
             </button>
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Actulmente no tenemos local, realizamos entregas por pedido en la estacion de Lanus, Ezeiza y Tristan Suarez</div>
+            <div class="accordion-body">Actulmente no tenemos local, realizamos entregas por pedido en la estación de Lanús, Ezeiza y Tristan Suarez</div>
           </div>
         </div>
         <div class="accordion-item">
@@ -91,7 +91,7 @@
             </button>
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Actualmente nuestra lista de precios es minorista, pero ofrecemos descuentos del 10% abonando en efectivo o transferencia</div>
+            <div class="accordion-body">Nuestra lista de precios es minorista, pero ofrecemos descuentos del 10% abonando en efectivo o transferencia</div>
           </div>
         </div>
       </div>
