--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
           </section>
 
           <section class="container-fluid">
-            <div class="row w-75 mx-auto my-5 bg-light">
-                <div class="col-lg-6 col-md-12 col-sm-12 bg-light">
+            <div class="row w-75 mx-auto my-5 bg-light enviosPagos">
+                <div class="col-lg-6 col-md-12 col-sm-12 bg-light imagenEnvios">
                     <img  class="img-fluid px-5" src="./multimedia/Envios.png" alt="Envios">
                     <div>
                         <h3 class="fs-5 mt-4 px-4 pb-1">Envios a todo el pais</h3>
                         <p class="px-4">Envios mediante Motomensajeria y por Correo</p>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 bg-light">
+                <div class="col-lg-6 col-md-12 col-sm-12 bg-light imagenPagos">
                     <img  class="img-fluid px-5" src="./multimedia/Pago.png" alt="Pagos">
                     <div>
                         <h3 class="fs-5 mt-4 px-4 pb-1">Medios de Pago</h3>
@@ -100,27 +100,27 @@
             </div>
           </section>
           <section class="container-fluid">
-            <div class="row w-75 mx-auto my-5 bg-dark" id="destacados">
+            <div class="row w-75 mx-auto my-5 bg-dark pb-4" id="destacados">
                 <p class="p-3 fs-4 text-white text-center">
                     Los<span class="text-warning"> Destacados</span> del mes
                 </p>
                 <p></p>
-                <div class="col-lg-4 col-md-12 col-sm-12 bg-dark px-4">
+                <div class="col-lg-4 col-md-12 col-sm-12 bg-dark">
                     <div>
-                        <h3 class="fs-5 mt-4 px- pb-1 text-white ">Shampoo Banana</h3>
+                        <h3 class="fs-5 mt-4 pb-4 text-white textDestaca">Shampoo Banana</h3>
                         <img class="img-fluid  imagenDestaca" src="./multimedia/destacados/ShampooBanana.jpg" alt="Shampoo Banana">
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 col-sm-12 bg-dark">
                     <div>
-                        <h3 class="fs-5 mt-4 px-4 pb-1 text-white ">Candy Cream</h3>
+                        <h3 class="fs-5 mt-4 pb-4 text-white textDestaca">Candy Cream</h3>
                         <img class="img-fluid imagenDestaca" src="./multimedia/destacados/CandyCream.jpg" alt="Candy Cream">
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 col-sm-12 bg-dark">
                     <div>
-                        <h3 class="fs-5 mt-4 px-4 pb-1 text-white ">Shampoo Elite</h3>
-                        <img class="img-fluid  imagenDestaca" src="./multimedia/destacados/ShampooElite.jpg" alt="Shampoo Elite">
+                        <h3 class="fs-5 mt-4 pb-4 text-white textDestaca">Shampoo Elite</h3>
+                        <img class="img-fluid imagenDestaca" src="./multimedia/destacados/ShampooElite.jpg" alt="Shampoo Elite">
                     </div>
                 </div>
             </div>
